<resources>

    <string name="app_name">Hotel Manage</string>
    <!--    <string name="app_name">Delete hotel</string>-->
    <string-array name="hotels">
        <item>Kignsbury</item>
        <item>Galadari</item>
        <item>Grand Hotel</item>
        <item>Ramada</item>
    </string-array>

    <string name="pl_name">Place Name</string>
    <string name="description">Description</string>
    <string name="edthtl">Edit Hotel</string>
    <string name="description1">Description</string>
    <string name="htlname">Hotel Name</string>
    <string name="btnUplod">Upload</string>

    <!--    package buying-->
    <string name="fe">Thank you for choosing..</string>
    <string name="dw">Here is your package details</string>
    <string name="ds">Selected Package Name: Butterfly Room</string>
    <string name="fsf">Total Packge Count: 2</string>
    <string name="fvrv">Total Price: LKR 45,340</string>
    <string name="kvkb">Confirm</string>

    <!--    add hotel form-->
    <string name="htlnme">Hotel Name</string>
    <string name="place_name">Hotel Name</string>
    <string name="decsrip">Description</string>
    <string name="amount">Amount</string>

    <!--    admin login-->
    <string name="email">Email</string>
    <string name="PW">Password</string>

    <!--    hotelUi-->
    <string name="WhereToStayTxt">Where to stay..?</string>
    <string name="hotel1">Galadari</string>
    <string name="hotel2">grand hotel</string>
    <string name="hotel3">Ramada</string>
    <string name="hotel4">Kingsbury</string>
    <string name="add">ADD</string>

    <!--sahan-->
    <string name="WELCOME">WELCOME</string>
    <string name="details">Please Enter Your Details</string>
    <string name="name">Enter Your Name</string>
    <string name="phone">Enter Your Phone Number</string>
    <string name="password">Enter Password</string>
    <string name="repasssword">Re-Enter Your Password</string>
    <string name="checkbox">I agree the terms and conditions.</string>
    <string name="register">REGISTER</string>
    <string name="phne_number">Phone Number: 074 3287560</string>
    <color name="bgcolor">#4FACF6</color>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="welcomemsg">We Lead, You Relax</string>
    <string name="logo">logo</string>
    <string name="admin_txt">Are You an Admin?</string>
    <string name="admin_login_btn">btn</string>
    <string name="signin_btn">Sign In</string>
    <string name="signup_btn">Sign Up</string>
    <string name="slogan1">Welcome to Taprobane!</string>
    <string name="intro">Whether planning a trip to beautiful Sri Lanka or looking for recommendations while there, our app has got you covered from transport options to must visit places, hotels for a comfortable stays. Taprobane is your ultimate travel companion for exploring Sri Lanka.</string>
    <string name="hotel">hotels</string>
    <string name="Guides">Guides</string>
    <string name="place">Places</string>
    <string name="Transport">Transport</string>
    <string name="todo">TODO</string>
    <string name="btnSelect">Select</string>
    <string name="header">HOTEL</string>
    <string name="addHotel">Add Hotel</string>
    <string name="editHotel">View Hotels</string>
    <string name="deleteHotel">Delete Hotel</string>


    <!--    package details-->
    <string name="but">2 nights</string>
    <string name="d">2                                                                                                                  k</string>
    <string name="ad">2 adults</string>
    <string name="ch">4 children</string>
    <string name="be">3 extra large bed</string>
    <string name="pr">LKR 34, 172</string>
    <string name="ni">3 nights</string>
    <string name="ad1">2 aduts</string>
    <string name="ber">1 double bed</string>
    <string name="p">LKR 40,500</string>
    <string name="pri">LKR 40, 500</string>
    <string name="a">3 nights</string>
    <string name="g">2 adults</string>
    <string name="h">1 large bed</string>
    <string name="l">LKR 30,375</string>
    <string name="ge">2 nights</string>
    <string name="hyh">1 adult</string>
    <string name="bg">1 single bed</string>
    <string name="vgh">LKR 8. 700</string>
    <string name="brf">book now</string>
    <string name="gg">PACKAGES</string>

    <!--    admin home-->
    <string name="hello_administrartor">Hello Administrator!</string>
    <string name="changes">Do you want do any changes..?</string>
    <string name="chng1">Do you want to do any changes?</string>
    <string name="hotel_management">Hotel Management</string>
    <string name="place_management">Place Management</string>
    <string name="guide_transport"><![CDATA[guide &c transport management]]></string>
    <string name="guide_tr"><![CDATA[Guide & transport Management]]></string>
    <string name="btnGuide">GUIDE MANAGEMENT</string>
    <string name="editHeading">Choose What Hotel You Want to edit?</string>
    <string name="search">Search By Hotel Name</string>
    <string name="hotelDetailsHeader">Here the Hotel Details</string>
    <string name="hotelName">Hotel Name</string>

</resources>
