<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/back4">

    <EditText
        android:id="@+id/dltHotelName"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hotelName"
        android:inputType="textPersonName"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/dltHotelDescription"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="text"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/dltHotelAmount"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="number"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btnUpdateData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Update Data" />


</LinearLayout>