<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave_haikei__1_"
    tools:context=".HotelPackageDetails">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/package1_image_width"
        android:layout_height="@dimen/package1_image_height"
        android:layout_marginStart="33dp"
        android:layout_marginTop="481dp"
        android:layout_marginEnd="281dp"
        android:layout_marginBottom="162dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/butter" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/package1_image_width"
        android:layout_height="@dimen/package1_image_height"
        android:layout_marginStart="33dp"
        android:layout_marginTop="247dp"
        android:layout_marginEnd="281dp"
        android:layout_marginBottom="396dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cottage" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/package1_image_width"
        android:layout_height="@dimen/package1_image_height"
        android:layout_marginStart="267dp"
        android:layout_marginTop="247dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="396dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homestay" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/package1_image_width"
        android:layout_height="@dimen/package1_image_height"
        android:layout_marginStart="266dp"
        android:layout_marginTop="481dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="163dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/room" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="573dp"
        android:layout_marginEnd="310dp"
        android:layout_marginBottom="139dp"
        android:text="@string/but"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="592dp"
        android:layout_marginEnd="310dp"
        android:layout_marginBottom="120dp"
        android:text="@string/ad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="611dp"
        android:layout_marginEnd="299dp"
        android:layout_marginBottom="101dp"
        android:text="@string/ch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="630dp"
        android:layout_marginEnd="255dp"
        android:layout_marginBottom="82dp"
        android:text="@string/be"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="649dp"
        android:layout_marginEnd="285dp"
        android:layout_marginBottom="63dp"
        android:text="@string/pr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="335dp"
        android:layout_marginEnd="306dp"
        android:layout_marginBottom="377dp"
        android:text="@string/ni"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="310dp"
        android:layout_marginBottom="356dp"
        android:text="@string/ad1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="275dp"
        android:layout_marginBottom="337dp"
        android:text="@string/ber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="394dp"
        android:layout_marginEnd="281dp"
        android:layout_marginBottom="318dp"
        android:text="@string/pri"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="293dp"
        android:layout_marginTop="335dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="377dp"
        android:text="@string/a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="293dp"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="356dp"
        android:text="@string/g"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="293dp"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="337dp"
        android:text="@string/h"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="293dp"
        android:layout_marginTop="394dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="318dp"
        android:text="@string/l"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="293dp"
        android:layout_marginTop="568dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="144dp"
        android:text="@string/ge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="293dp"
        android:layout_marginTop="587dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="125dp"
        android:text="@string/hyh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="293dp"
        android:layout_marginTop="606dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="106dp"
        android:text="@string/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="293dp"
        android:layout_marginTop="630dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="82dp"
        android:text="@string/vgh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/bookBtn_width"
        android:layout_height="@dimen/bookBtn_height"
        android:layout_marginStart="33dp"
        android:layout_marginTop="419dp"
        android:layout_marginEnd="258dp"
        android:layout_marginBottom="272dp"
        android:backgroundTint="@color/ghfh"
        android:text="@string/brf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/bookBtn_width"
        android:layout_height="@dimen/bookBtn_height"
        android:layout_marginStart="269dp"
        android:layout_marginTop="419dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="272dp"
        android:backgroundTint="@color/ghfh"
        android:text="@string/brf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/bookBtn_width"
        android:layout_height="@dimen/bookBtn_height"
        android:layout_marginStart="36dp"
        android:layout_marginTop="675dp"
        android:layout_marginEnd="255dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/ghfh"
        android:text="@string/brf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/bookBtn_width"
        android:layout_height="@dimen/bookBtn_height"
        android:layout_marginStart="269dp"
        android:layout_marginTop="675dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/ghfh"
        android:text="@string/brf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="612dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/gg"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>